Add platformio firmware for CamelPad with display and communication features
- Created platformio.ini for ESP32-S3 configuration.
- Implemented communication protocol in protocol.h for message framing and checksum.
- Developed SerialComms class for handling serial communication and message processing.
- Added configuration for I2C and display in config.h.
- Implemented display initialization and management in display_manager.
- Integrated display rendering with button labels and status notifications.
- Added SeesawManager for handling button inputs and NeoPixel control.
- Updated main loop to manage communication and display updates.
- Enhanced button handling with debounce logic in SeesawManager.
- Updated esphome.yaml to define button sensors for integration.

--- a/pad/esphome.yaml
+++ b/pad/esphome.yaml
@@ -84,7 +84,11 @@ binary_sensor:
   - platform: seesaw
     seesaw_id: seesaw_hub
     pin: 11
-    name: "Button"
+    name: "Button1"
+  - platform: seesaw
+    seesaw_id: seesaw_hub
+    pin: 12
+    name: "Button2"
 
 light:
   - platform: seesaw_neopixel
